--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <head>
 
 
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5010995,document.body||document.documentElement)</script>  
   <h1> Bienvenue sur CrackYourGames V2 ! </h1>
   <h2> Crackyourgames est un site ou tu pourra télécharger tout les crack de tout les jeux sur pc </h2>
   
