--- a/jeux.html
+++ b/jeux.html
@@ -3,7 +3,7 @@
 
 
 
-  
+  <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5010995,document.body||document.documentElement)</script>
    
     <br><br><br><br><br>
 	
