--- a/jeux.html
+++ b/jeux.html
@@ -3,7 +3,7 @@
 
 
 
-  <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5010995,document.body||document.documentElement)</script>
+  
    
     <br><br><br><br><br>
 	
@@ -69,7 +69,7 @@
 	<h1>  P</h1>
 	
 	<h3> Pro soccer online</h3>
-	<a style="text-align:center;" href="https://link-target.net/25424/pro-soccer-online-dl" target="blank">Téléchargement Direct (1cloudFile.com)</a>
+	<a style="text-align:center;" href="https://link-hub.net/25424/pro-soccer-online" target="blank">Téléchargement Direct (1cloudFile.com)</a>
 	<br>
 	<a style="text-align:center;" href="https://bowfile.com/18X8" target="blank"> Crack online patch (a mettre dans le dossier du jeu)
 	
