--- a/jeux.html
+++ b/jeux.html
@@ -66,16 +66,53 @@
 	<h1> O</h1>
 	
 	
-	<h1>  P</h1>
+	<h1> P</h1>
 	
 	<h3> Pro soccer online</h3>
 	<a style="text-align:center;" href="https://link-hub.net/25424/pro-soccer-online" target="blank">Téléchargement Direct (1cloudFile.com)</a>
 	<br>
-	<a style="text-align:center;" href="https://bowfile.com/18X8" target="blank"> Crack online patch (a mettre dans le dossier du jeu)
+	<a style="text-align:center;" href="https://bowfile.com/18X8" target="blank"> Crack online patch (a mettre dans le dossier du jeu)</a>
+	
+	
+	
+	
+	<h1> Q</h1>
 	
 	
 	
 	
 	
+	<h1> R</h1>
+	
+	
+	
+	<h1> S</h1>
+	
+	
+	
+	<h1> T</h1>
+	<h3>The Forest v1.12 + online inclus pour jouer avec ses amis</h3>
+	<a style="text-align:center;" href="https://link-center.net/25424/the-forest-v112-online" target="blank">Téléchargement Direct (1cloudFile.com)</a>
+	<a style="text-align:center;" href="https://bowfile.com/3v6" target="blank"> Crack online patch (a mettre dans le dossier du jeu) ( remplacer dans la racine du fichier du jeu)</a>
+	
+	<h1> U</h1>
+	
+	
+	
+	<h1> V</h1>
+	
+	
+	<h1> W</h1>
+	
+	
+	
+	<h1> X</h1>
+	
+	
+	<h1> Y</h1>
+	
+	
+	
+	<h1> Z</h1>
 	
 	
