--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5010995,document.body||document.documentElement)</script>  
-  <h1> Bienvenue sur CrackYourGames Version beta (V0.1) ! </h1>
-  <h2> Crackyourgames est un site ou tu pourra télécharger tout les crack de tout les jeux sur pc </h2>
+  
+  <h1 style=text-align:center;> Bienvenue sur CrackYourGames Version beta (V0.1) ! </h1>
+  <h2> Crackyourgames est un site ou tu pourra telecharger tout les crack de tout les jeux sur pc </h2>
   <h2> Pour chaque demande de mise a jour de jeu ou pour mettre un jeu contacte moi sur discord : soheib#6999</h2>
   
-  <a style="text-align:center;" href="jeux.html" target="blank">Accèder a la page de jeux </a>
+  <a style="text-align:center;" href="jeux.html" target="blank">Acceder a la page de jeux </a>
