--- a/jeux.html
+++ b/jeux.html
@@ -1,4 +1,17 @@
-<h1> CTRL + F pour trouver le jeux de ton choix <h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" type"image/png" sizes="16x16" href="images/logo.png">
+  <meta charset="utf-8" />
+  <title>Crackyourgames</title>
+<head>
+
+
+
+
+
+       <h1> CTRL + F pour trouver le jeux de ton choix <h1>
 
 
 
@@ -9,7 +22,7 @@
 	
 	<h1> A</h1>
 	<h3> Among Us V2022.2.24S(online inclus avec tout les skins)</h3>
-	<a style="text-align:center;" href="https://link-center.net/25424/among-us-v2022224s" target="blank">Téléchargement Direct (1cloudFile)</a>
+	<a style="text-align:center;" href="https://link-center.net/25424/among-us-v2022224s" target="blank">Telechargement Direct (1cloudFile)</a>
 	
 	
 	
@@ -58,7 +71,7 @@
 	<h1> M</h1>
 	
 	<h3> NARUTO SHIPPUDEN Ultimate Ninja Storm 4 v1.08 (8 DLC inclus)(derniere maj 09/04/2022)</h3>
-	<a style="text-align:center;" href="https://link-center.net/25424/naruto-storm4" target="blank">Téléchargement Direct (1fichier.com)</a>
+	<a style="text-align:center;" href="https://link-center.net/25424/naruto-storm4" target="blank">Telechargement Direct (1fichier.com)</a>
     
 	
 	<h1> N</h1>
@@ -69,7 +82,7 @@
 	<h1> P</h1>
 	
 	<h3> Pro soccer online</h3>
-	<a style="text-align:center;" href="https://link-hub.net/25424/pro-soccer-online" target="blank">Téléchargement Direct (1cloudFile.com)</a>
+	<a style="text-align:center;" href="https://link-hub.net/25424/pro-soccer-online" target="blank">Telechargement Direct (1cloudFile.com)</a>
 	<br>
 	<a style="text-align:center;" href="https://bowfile.com/18X8" target="blank"> Crack online patch (a mettre dans le dossier du jeu)</a>
 	
@@ -92,7 +105,8 @@
 	
 	<h1> T</h1>
 	<h3>The Forest v1.12 + online inclus pour jouer avec ses amis</h3>
-	<a style="text-align:center;" href="https://link-center.net/25424/the-forest-v112-online" target="blank">Téléchargement Direct (1cloudFile.com)</a>
+	<a style="text-align:center;" href="https://link-center.net/25424/the-forest-v112-online" target="blank">Telechargement Direct (1cloudFile.com)</a>
+	<br>
 	<a style="text-align:center;" href="https://bowfile.com/3v6" target="blank"> Crack online patch (a mettre dans le dossier du jeu) ( remplacer dans la racine du fichier du jeu)</a>
 	
 	<h1> U</h1>
