--- a/jeux.html
+++ b/jeux.html
@@ -85,7 +85,9 @@
 	<a style="text-align:center;" href="https://link-hub.net/25424/pro-soccer-online" target="blank">Telechargement Direct (1cloudFile.com)</a>
 	<br>
 	<a style="text-align:center;" href="https://bowfile.com/18X8" target="blank"> Crack online patch (a mettre dans le dossier du jeu)</a>
-	
+	<br>
+        <h3> Papers Please v1.2.76 (dernière version maj 13/04/2022)</h3> 
+	<a style="text-align:center;" href="https://link-center.net/25424/papers-please-v1276" target="blank">Telechargement Direct (1cloudFile.com)</a>       
 	
 	
 	
