--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@
   <h2> Crackyourgames est un site ou tu pourra telecharger tout les crack de tout les jeux sur pc </h2>
   <h2> Pour chaque demande de mise a jour de jeu ou pour mettre un jeu contacte moi sur discord : soheib#6999</h2>
   
-  <a style="text-align:center;" href="jeux.html" target="blank">Acceder a la page de jeux </a>
+  <a style="text-align:center;" href="https://crackyourgames.tk/jeux" target="blank">Acceder a la page de jeux </a>
