--- a/jeux.html
+++ b/jeux.html
@@ -53,6 +53,8 @@
 	
 	<h1> H</h1>
 	
+	<h3> Hocus 2 Build 6307192 </h3>
+	<a style="text-align:center;" href="https://link-center.net/25424/hocus-2-build-6307192" target="blank">Telechargement Direct (1fichier.com)</a>        
 	
 	<h1> I</h1>
 	
