--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5010995,document.body||document.documentElement)</script>  
   
-  <h1 style=text-align:center;> Bienvenue sur CrackYourGames Version beta (V0.2) ! </h1>
+  <h1 style=text-align:center;> Bienvenue sur CrackYourGames Version beta (V0.2.1) (dernière maj : 11/08/2022) ! </h1>
   <h2> Crackyourgames est un site ou tu pourra telecharger tout les crack de tout les jeux sur pc </h2>
   <h2> Pour chaque demande de mise a jour de jeu ou pour mettre un jeu contacte moi sur discord : soheib#6999</h2>
   
