--- a/jeux.html
+++ b/jeux.html
@@ -38,7 +38,11 @@
 	<h1> D</h1>
 	<h3> Dragon ball Z kakarot </h3>
 	<a style="text-align:center;" href="https://uptobox.com/624e58tr06fr" target="blank">Telechargement en .torrent (vous avez besoin de uTorrent pour installer) </a>
-	
+	<h3> Dragon Ball FighterZ </h3>
+	<a style="text-align:center;" href="https://direct-link.net/25424/download-dragon-ball-fz" target="blank">Telechargement téléchargement direct </a>
+	<a style="text-align:center;" href="https://anonfiles.com/uajet24bye" target="blank"> Crack online patch (a mettre dans le dossier du jeu)</a>
+	<br>       
+	       
 	
 	<h1> E</h1>
 	
