--- a/jeux.html
+++ b/jeux.html
@@ -8,6 +8,10 @@
 <head>
 
 
+<label for="site-search">recherche ton jeux:</label>
+<input type="search" id="site-search" name="q">
+
+<button>Search</button>
 
 
 
