--- a/jeux.html
+++ b/jeux.html
@@ -100,7 +100,9 @@
 	<br>
         <h3> Papers Please v1.2.76 (dernière version maj 13/04/2022)</h3> 
 	<a style="text-align:center;" href="https://link-center.net/25424/papers-please-v1276" target="blank">Telechargement Direct (1cloudFile.com)</a>       
-	
+	<h3> Prison Architect Build 9937246</h3>
+	<a style="text-align:center;" href="https://1fichier.com/?y7zpt6q8me9eiwhckfzv" target="blank">Telechargement Direct (1fichier.com)</a>
+	<br>
 	
 	
 	<h1> Q</h1>
