--- a/index.html
+++ b/index.html
@@ -14,3 +14,11 @@
   <h2> Pour chaque demande de mise a jour de jeu ou pour mettre un jeu contacte moi sur discord : soheib#9685</h2>
   
   <a style="text-align:center;" href="https://crackyourgames.tk/jeux" target="blank">Acceder a la page de jeux </a>
+
+  
+  
+   <br>
+  <br>
+  
+  <h1> annonce : pour des raisons d'argent mon site fermera le 09/04/2023 car pas rentable pour payer le nom de domaine, si les benefice du site dépasse 8,20€ je poursuiverai le site</h1><br>
+    <h2> vous pouvez me soutenir ici bitcoin : 1KvvTX3CU3woj5hoG9WRJnPZ43QskJDKiW</h2>
