--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
    <br>
   <br>
   
-  <h1> annonce : pour des raisons d'argent mon site fermera le 09/04/2023 car pas rentable pour payer le nom de domaine, si les benefice du site dépasse 8,20€ je poursuiverai le site</h1><br>
+  <h1> annonce : pour des raisons d'argent mon site fermera le 09/04/2023 car pas rentable pour payer le nom de domaine, si les benefice total du site dépasse 8,20€ je poursuiverai d'au moins 1 an le site</h1><br>
     <h2> vous pouvez me soutenir ici bitcoin : 1KvvTX3CU3woj5hoG9WRJnPZ43QskJDKiW</h2>
