--- a/jeux.html
+++ b/jeux.html
@@ -26,7 +26,7 @@
 	
 	<h1> A</h1>
 	<h3> Among Us V2022.2.24S(online inclus avec tout les skins)</h3>
-	<a style="text-align:center;" href="https://link-center.net/25424/among-us-v2022224s" target="blank">Telechargement Direct (1cloudFile)</a>
+	<a style="text-align:center;" href="https://1fichier.com/?i9uzlqw78w2dhd428huc" target="blank">Telechargement Direct (1fichier.com)</a>
 	
 	
 	
