Refonte globale du site: structure, design et scripts

--- a/404.html
+++ b/404.html
@@ -1,1 +1,18 @@
-<a>Erreur 404 page Non trouvée Rip</a>
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>404 — Page introuvable</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <main class="section">
+      <div class="container panel">
+        <h1>404</h1>
+        <p>Oups, cette page n'existe pas ou a été déplacée.</p>
+        <a class="btn btn-primary" href="/index.html">Retour à l'accueil</a>
+      </div>
+    </main>
+  </body>
+</html>
