--- a/jeux.html
+++ b/jeux.html
@@ -1,148 +1,79 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" type"image/png" sizes="16x16" href="images/logo.png">
-  <meta charset="utf-8" />
-  <title>Crackyourgames</title>
-<head>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Catalogue de jeux recommandés par la communauté CrackYourGames." />
+    <title>Catalogue des jeux — CrackYourGames</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="logo.png" />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <header class="site-header">
+      <div class="container nav-wrap">
+        <a class="brand" href="index.html" aria-label="Accueil CrackYourGames">
+          <img src="logo.png" alt="Logo CrackYourGames" />
+          <span>CrackYourGames</span>
+        </a>
+        <nav aria-label="Navigation principale">
+          <a href="index.html">Accueil</a>
+          <a href="jeux.html" aria-current="page">Catalogue</a>
+        </nav>
+      </div>
+    </header>
 
+    <main class="section">
+      <div class="container">
+        <h1>Catalogue des jeux</h1>
+        <p class="intro">Utilise la recherche pour filtrer les recommandations par nom, genre ou plateforme.</p>
 
-<label for="site-search">recherche ton jeux:</label>
-<input type="search" id="site-search" name="q">
+        <label class="search-label" for="game-search">Rechercher un jeu</label>
+        <input id="game-search" class="search" type="search" placeholder="Ex: The Forest, simulation, coop..." />
 
-<button>Search</button>
+        <div class="cards game-grid" id="game-list">
+          <article class="card game-card" data-search="among us party multijoueur pc">
+            <h2>Among Us</h2>
+            <p>Jeu de déduction sociale multijoueur, parfait entre amis.</p>
+            <span class="chip">Party</span>
+          </article>
+          <article class="card game-card" data-search="dragon ball fighterz combat arcade pc">
+            <h2>Dragon Ball FighterZ</h2>
+            <p>Combat nerveux en 2.5D avec un style visuel fidèle à l'anime.</p>
+            <span class="chip">Combat</span>
+          </article>
+          <article class="card game-card" data-search="papers please simulation gestion indie pc">
+            <h2>Papers, Please</h2>
+            <p>Simulation narrative culte, mêlant inspection et dilemmes moraux.</p>
+            <span class="chip">Simulation</span>
+          </article>
+          <article class="card game-card" data-search="the forest survie coop horreur pc">
+            <h2>The Forest</h2>
+            <p>Aventure survie coopérative dans un environnement hostile.</p>
+            <span class="chip">Survie</span>
+          </article>
+          <article class="card game-card" data-search="prison architect gestion strategie pc">
+            <h2>Prison Architect</h2>
+            <p>Conçois et administre une prison efficace en mode sandbox.</p>
+            <span class="chip">Gestion</span>
+          </article>
+          <article class="card game-card" data-search="naruto storm 4 combat action pc">
+            <h2>Naruto Storm 4</h2>
+            <p>Action-combat spectaculaire avec un mode histoire dynamique.</p>
+            <span class="chip">Action</span>
+          </article>
+        </div>
 
+        <p id="empty-state" class="empty-state" hidden>Aucun jeu ne correspond à ta recherche.</p>
+      </div>
+    </main>
 
+    <footer class="site-footer">
+      <div class="container">
+        <p>Besoin de suggestions ? Ajoute tes idées via la communauté Discord.</p>
+      </div>
+    </footer>
 
-       <h1> CTRL + F pour trouver le jeux de ton choix <h1>
-
-
-
-
-  
-   
-    <br><br><br><br><br>
-	
-	<h1> A</h1>
-	<h3> Among Us V2022.2.24S(online inclus avec tout les skins)</h3>
-	<a style="text-align:center;" href="https://1fichier.com/?i9uzlqw78w2dhd428huc" target="blank">Telechargement Direct (1fichier.com)</a>
-	
-	
-	
-	<h1> B</h1>
-	
-	
-	
-	
-	<h1> C</h1>
-	
-	
-	
-	<h1> D</h1>
-	<h3> Dragon ball Z kakarot </h3>
-	<a style="text-align:center;" href="https://uptobox.com/624e58tr06fr" target="blank">Telechargement en .torrent (vous avez besoin de uTorrent pour installer) </a>
-	<h3> Dragon Ball FighterZ </h3>
-	<a style="text-align:center;" href="https://direct-link.net/25424/download-dragon-ball-fz" target="blank">Telechargement téléchargement direct </a>
-	<br>
-	<a style="text-align:center;" href="https://anonfiles.com/uajet24bye" target="blank"> Crack online patch (a mettre dans le dossier du jeu)</a>
-	<br>       
-	       
-	
-	<h1> E</h1>
-	
-	
-	
-	
-	<h1> F</h1>
-	
-	
-	
-	<h1> G</h1>
-	
-	
-	<h1> H</h1>
-	
-	<h3> Hocus 2 Build 6307192 </h3>
-	<a style="text-align:center;" href="https://link-center.net/25424/hocus-2-build-6307192" target="blank">Telechargement Direct (1fichier.com)</a>        
-	
-	<h1> I</h1>
-	
-	
-	
-	<h1> J</h1>
-	
-	
-	<h1> K</h1>
-	
-	
-	<h1> L</h1>
-	
-	
-	
-	<h1> M</h1>
-	
-	<h3> NARUTO SHIPPUDEN Ultimate Ninja Storm 4 v1.08 (8 DLC inclus)(derniere maj 09/04/2022)</h3>
-	<a style="text-align:center;" href="https://link-center.net/25424/naruto-storm4" target="blank">Telechargement Direct (1fichier.com)</a>
-    
-	
-	<h1> N</h1>
-	
-	<h1> O</h1>
-	
-	
-	<h1> P</h1>
-	
-	<h3> Pro soccer online</h3>
-	<a style="text-align:center;" href="https://link-hub.net/25424/pro-soccer-online" target="blank">Telechargement Direct (1cloudFile.com)</a>
-	<br>
-	<a style="text-align:center;" href="https://bowfile.com/18X8" target="blank"> Crack online patch (a mettre dans le dossier du jeu)</a>
-	<br>
-        <h3> Papers Please v1.2.76 (dernière version maj 13/04/2022)</h3> 
-	<a style="text-align:center;" href="https://link-center.net/25424/papers-please-v1276" target="blank">Telechargement Direct (1cloudFile.com)</a>       
-	<h3> Prison Architect Build 9937246</h3>
-	<a style="text-align:center;" href="https://1fichier.com/?y7zpt6q8me9eiwhckfzv" target="blank">Telechargement Direct (1fichier.com)</a>
-	<br>
-	
-	
-	<h1> Q</h1>
-	
-	
-	
-	
-	
-	<h1> R</h1>
-	
-	
-	
-	<h1> S</h1>
-	
-	
-	
-	<h1> T</h1>
-	<h3>The Forest v1.12 + online inclus pour jouer avec ses amis</h3>
-	<a style="text-align:center;" href="https://link-center.net/25424/the-forest-v112-online" target="blank">Telechargement Direct (1cloudFile.com)</a>
-	<br>
-	<a style="text-align:center;" href="https://bowfile.com/3v6" target="blank"> Crack online patch (a mettre dans le dossier du jeu) ( remplacer dans la racine du fichier du jeu)</a>
-	
-	<h1> U</h1>
-	
-	
-	
-	<h1> V</h1>
-	
-	
-	<h1> W</h1>
-	
-	
-	
-	<h1> X</h1>
-	
-	
-	<h1> Y</h1>
-	
-	
-	
-	<h1> Z</h1>
-	
-	
+    <script src="js/main.js"></script>
+    <script src="js/games.js"></script>
+  </body>
+</html>
